Deployed  with MkDocs version: 1.1.2

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -113,9 +113,11 @@
         
         <div class="col-md-12" role="main">
 
-<h1 id="numada-seminar">NuMaDa Seminar</h1>
+<h1 id="numads-seminar">NuMaDS Seminar</h1>
 <p>We organize a seminar in <strong>Numerical Analysis, Matrix Methods and Data Science.</strong> The seminar is scheduled on Wednesdays at 17:00 (CET).</p>
-<p><br></p>
+<p>The seminar focuses on diverse topics in numerical analysis, numerical linear algebra, scientific computing and matrix theory with particular emphasis on their application in control theory, network science, data mining and machine learning.</p>
+<p>Questions or comments about the seminar should be sent to <a href="https://www.gssi.it/people/professors/lectures-maths/item/545-guglielmi-nicola">Nicola Guglielmi</a> or <a href="https://ftudisco.gitlab.io">Francesco Tudisco</a>. 
+ <br></p>
 <table>
 <thead>
 <tr>
@@ -127,16 +129,10 @@
 </thead>
 <tbody>
 <tr>
-<td>- - -</td>
-<td>- - -</td>
-<td>- - -</td>
+<td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"/></td>
+<td><a href="https://www.tu-chemnitz.de/mathematik/wire/prof.php">Martin Stoll</a><br> TU-Chemnitz</td>
+<td>TBA</td>
 <td>November 25, 2020</td>
-</tr>
-<tr>
-<td>- - -</td>
-<td>- - -</td>
-<td>- - -</td>
-<td>November 11, 2020</td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="http://people.disim.univaq.it/~raffaele.dambrosio/Raf.png"/></td>
@@ -161,10 +157,9 @@
 <!-- 
 #### Date, Speaker Name
 Talk title, Talk Abstract and other info
-
+|- - - |- - -|- - -| November 11, 2020|
 #### Date, Speaker Name
 Talk title, Talk Abstract and other info
-
 
 -----------------
 
