Deployed  with MkDocs version: 1.1.2

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -115,7 +115,7 @@
 
 <h1 id="numads-seminar">NuMaDS Seminar</h1>
 <p>We organize a seminar in <strong>Numerical Analysis, Matrix Methods and Data Science.</strong> The seminar is scheduled on Wednesdays at 17:00 (CET).</p>
-<p>The seminar focuses on diverse topics in numerical analysis, numerical linear algebra, scientific computing and matrix theory with particular emphasis on their application in control theory, network science, data mining and machine learning.</p>
+<p>The seminar focuses on various topics in numerical analysis, numerical linear algebra, scientific computing and matrix theory with particular emphasis on their application in control theory, network science, data mining and machine learning.</p>
 <p>Questions or comments about the seminar should be sent to <a href="https://www.gssi.it/people/professors/lectures-maths/item/545-guglielmi-nicola">Nicola Guglielmi</a> or <a href="https://ftudisco.gitlab.io">Francesco Tudisco</a>. 
  <br></p>
 <table>
