--- a/seminar/index.html
+++ b/seminar/index.html
@@ -129,10 +129,16 @@
 </thead>
 <tbody>
 <tr>
-<td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"/></td>
+<td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"></td>
 <td><a href="https://www.tu-chemnitz.de/mathematik/wire/prof.php">Martin Stoll</a><br> TU-Chemnitz</td>
 <td>TBA</td>
 <td>November 25, 2020</td>
+</tr>
+<tr>
+<td><img style="width:60px;" src="https://www.gssi.it/media/k2/items/cache/131afc1cb16b90a10de84b1d079bb47e_L.jpg"></td>
+<td><a href="https://na.uni-tuebingen.de/~lubich/">Christian Lubich</a><br> University of Tuebingen</td>
+<td>TBA</td>
+<td>November 18, 2020</td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="http://people.disim.univaq.it/~raffaele.dambrosio/Raf.png"/></td>
@@ -147,9 +153,9 @@
 <td>October 14, 2020</td>
 </tr>
 <tr>
-<td><img style="width:60px;" src="http://pages.di.unipi.it/fpoloni/me/picture_2018_PEVA.jpg"/></td>
+<td><img style="width:60px;" src="http://pages.di.unipi.it/fpoloni/me/picture_2018_PEVA.jpg"></td>
 <td><a href="http://pages.di.unipi.it/fpoloni/index.html">Federico Poloni</a><br> University of Pisa</td>
-<td><strong>Inverses of quasidefinite matrices in block-factored form, with an application to control theory</strong><br>(joint work with P. Benner)<br>We describe an algorithm to compute the explicit inverse of a dense quasi-definite matrix, i.e., a symmetric matrix of the form [-BB^T, A; A^T, C^TC], with the (1,1) block negative semidefinite and the (2,2) block positive semidefinite. The algorithm is a variant of Gauss-Jordan elimination that works on the low-rank factors $B$ and $C$ directly without ever forming those blocks. The individual elimination steps amount to a transformation called <em>principal pivot transform</em>; it was shown in [Poloni, Strabic 2016] how to perform it by working only on $A, B, C$, and we rely on that procedure here. We discuss the stability of the resulting method, and show how the algorithm (and in particular the produced low-rank factors) can be of use in control theory, in the context of the matrix sign iteration, which is a method used to solve algebraic Riccati equations.<br><a href="https://zoom.us/meeting/register/tJMvce2hrD4iEtPooXYOxi8s8ztDk02ZlfqZ">Zoom link</a><br> <a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MG11dWZmMzNhZGgwZ25yN2xjOHM3ZmtrbjYgY19yZzI0Z3Q2dHVyZjY1NjFlNmc3ZmI1dG84Y0Bn&amp;tmsrc=c_rg24gt6turf6561e6g7fb5to8c%40group.calendar.google.com">Add event to Google calendar</a></td>
+<td><strong>Inverses of quasidefinite matrices in block-factored form, with an application to control theory</strong><br>(joint work with P. Benner)<br>We describe an algorithm to compute the explicit inverse of a dense quasi-definite matrix, i.e., a symmetric matrix of the form [-BB^T, A; A^T, C^TC], with the (1,1) block negative semidefinite and the (2,2) block positive semidefinite. The algorithm is a variant of Gauss-Jordan elimination that works on the low-rank factors $B$ and $C$ directly without ever forming those blocks. The individual elimination steps amount to a transformation called <em>principal pivot transform</em>; it was shown in [Poloni, Strabic 2016] how to perform it by working only on $A, B, C$, and we rely on that procedure here. We discuss the stability of the resulting method, and show how the algorithm (and in particular the produced low-rank factors) can be of use in control theory, in the context of the matrix sign iteration, which is a method used to solve algebraic Riccati equations.<br><a href="https://zoom.us/meeting/register/tJMvce2hrD4iEtPooXYOxi8s8ztDk02ZlfqZ">Zoom link</a><br><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MG11dWZmMzNhZGgwZ25yN2xjOHM3ZmtrbjYgY19yZzI0Z3Q2dHVyZjY1NjFlNmc3ZmI1dG84Y0Bn&amp;tmsrc=c_rg24gt6turf6561e6g7fb5to8c%40group.calendar.google.com">Add event to Google calendar</a></td>
 <td>September 30, 2020</td>
 </tr>
 </tbody>
