Deployed  with MkDocs version: 1.1.2

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -113,8 +113,8 @@
         
         <div class="col-md-12" role="main">
 
-<h1 id="numads-seminar">NuMaDS Seminar</h1>
-<p>We organize a seminar in <strong>Numerical Analysis, Matrix Methods and Data Science.</strong> The seminar is scheduled on Wednesdays at 17:00 (CET).</p>
+<h1 id="nomads-seminar">NOMADS Seminar</h1>
+<p>We organize a seminar in <strong>Numerical ODEs, Matrix Analysis and Data Science.</strong> The seminar is scheduled on Wednesdays at 17:00 (CET).</p>
 <p>The seminar focuses on various topics in numerical analysis, numerical linear algebra, scientific computing and matrix theory with particular emphasis on their application in control theory, network science, data mining and machine learning.</p>
 <p>Questions or comments about the seminar should be sent to <a href="https://www.gssi.it/people/professors/lectures-maths/item/545-guglielmi-nicola">Nicola Guglielmi</a> or <a href="https://ftudisco.gitlab.io">Francesco Tudisco</a>. 
  <br></p>
@@ -149,7 +149,7 @@
 <tr>
 <td><img style="width:60px;" src="http://automatica.dei.unipd.it/tl_files/utenti2/baggio/GiacomoBaggio.jpg"/></td>
 <td><a href="https://baggiogi.github.io/">Giacomo Baggio</a><br> University of Padua</td>
-<td>TBA</td>
+<td><strong>From Model-Based to Data-Driven Control of Network Dynamics</strong> <br> The control of complex dynamical networks has attracted increasing interest over the past few years, with reference, in particular, to problems of controllability, optimal input design, and minimal actuator placement. In this talk, I will address the problem of controlling linear dynamical networks from a control-energy or "practical" perspective. I will first focus on the model-based scenario and review the fundamental metrics, theoretical limitations, and challenges in controlling networks using a limited number of control nodes. In particular, I will emphasize the impact of the "degree" of non-normality of the network's adjacency matrix on the control performance. Then, I will switch to a data-driven scenario, and show how some network control problems can be efficiently solved by relying on experimental data only.<br><a href="https://us02web.zoom.us/j/81269439904?pwd=T0FYZllnWDErQkV1RWVCMTdhZVFZdz09">Zoom link</a><br><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NTVlaWUwOG1pYXZwbG10MnMwNDU2YTJtNGYgY19yZzI0Z3Q2dHVyZjY1NjFlNmc3ZmI1dG84Y0Bn&amp;tmsrc=c_rg24gt6turf6561e6g7fb5to8c%40group.calendar.google.com">Add event to Google calendar</a></td>
 <td>October 14, 2020</td>
 </tr>
 <tr>
