Deployed  with MkDocs version: 1.1.2

--- a/people/index.html
+++ b/people/index.html
@@ -113,7 +113,7 @@
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="first-level active"><a href="#faculties">Faculties</a></li>
+        <li class="first-level active"><a href="#faculty">Faculty</a></li>
             <li class="second-level"><a href="#nicola-guglielmi">Nicola Guglielmi</a></li>
                 
             <li class="second-level"><a href="#francesco-tudisco">Francesco Tudisco</a></li>
@@ -138,7 +138,7 @@
 </div></div>
         <div class="col-md-9" role="main">
 
-<h1 id="faculties">Faculties</h1>
+<h1 id="faculty">Faculty</h1>
 <!-- <br> -->
 
 <h3 id="nicola-guglielmi">Nicola Guglielmi</h3>
