--- a/seminar/index.html
+++ b/seminar/index.html
@@ -129,10 +129,22 @@
 </thead>
 <tbody>
 <tr>
+<td><img style="width:60px;" src="/img/gceruti.jpeg"></td>
+<td><a href="https://na.uni-tuebingen.de/~ceruti/">Gianluca Ceruti</a><br> University of Tuebingen</td>
+<td>TBA</td>
+<td>December 16, 2020</td>
+</tr>
+<tr>
 <td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"></td>
 <td><a href="https://www.tu-chemnitz.de/mathematik/wire/prof.php">Martin Stoll</a><br> TU-Chemnitz</td>
 <td>TBA</td>
 <td>December 2, 2020</td>
+</tr>
+<tr>
+<td><img style="width:60px;" src="https://www.kindpng.com/picc/m/24-248253_user-profile-default-image-png-clipart-png-download.png"></td>
+<td><a href="http://bugs.unica.it/~patricia/">Patricia Diaz De Alba</a><br> GSSI</td>
+<td>TBA</td>
+<td>November 20, 2020</td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="https://www.gssi.it/media/k2/items/cache/131afc1cb16b90a10de84b1d079bb47e_L.jpg"></td>
@@ -143,7 +155,7 @@
 <tr>
 <td><img style="width:60px;" src="http://people.disim.univaq.it/~raffaele.dambrosio/Raf.png"/></td>
 <td><a href="http://people.disim.univaq.it/~raffaele.dambrosio/">Raffaele D'Ambrosio</a><br> University of L'Aquila</td>
-<td><strong>Structure-preserving numerics for stochastic differential equations</strong><br>Modern Numerical Analysis is not only devoted to accurately approximating the solutions of various problems through efficient and robust schemes, but also to retaining qualitative properties of the continuous problem over long times. Sometimes such conservation properties naturally characterize the numerical schemes, while in more complex situations preservation issues have to be conveyed into the numerical approximations. The talk is focused on presenting recent advances in structure-preservation issues for selected stochastic differential equations satisfying some characteristic invariance laws. The behaviour of stochastic multistep methods in the preservation of mean-square contractivity will be analyzed; we show, in this case, that conservation properties are hidden, as a matter of fact, into conditional stability properties of numerical schemes. The analysis will also be conveyed to the discretization of stochastic Hamiltonian problems for the numerical preservation of the behaviour of the expected Hamiltonian. The theoretical analysis will also be supported by the numerical evidence.<br><a href="https://us02web.zoom.us/j/83111336706?pwd=UklwazgrQ0xYWk5FVEdyd2FLZm9tdz09">Zoom link</a><br><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTJmYnBncGY4ZXBqbjBiM2M2OTZ2aW5tOHIgY19yZzI0Z3Q2dHVyZjY1NjFlNmc3ZmI1dG84Y0Bn&amp;tmsrc=c_rg24gt6turf6561e6g7fb5to8c%40group.calendar.google.com">Add event to Google calendar</a></td>
+<td><strong>Structure-preserving numerics for stochastic differential equations</strong><br>Modern Numerical Analysis is not only devoted to accurately approximating the solutions of various problems through efficient and robust schemes, but also to retaining qualitative properties of the continuous problem over long times. Sometimes such conservation properties naturally characterize the numerical schemes, while in more complex situations preservation issues have to be conveyed into the numerical approximations. The talk is focused on presenting recent advances in structure-preservation issues for selected stochastic differential equations satisfying some characteristic invariance laws. The behaviour of stochastic multistep methods in the preservation of mean-square contractivity will be analyzed; we show, in this case, that conservation properties are hidden, as a matter of fact, into conditional stability properties of numerical schemes. The analysis will also be conveyed to the discretization of stochastic Hamiltonian problems for the numerical preservation of the behaviour of the expected Hamiltonian. The theoretical analysis will also be supported by the numerical evidence.<br><a href="https://us02web.zoom.us/j/83111336706?pwd=UklwazgrQ0xYWk5FVEdyd2FLZm9tdz09">Zoom link</a><br><a href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MTJmYnBncGY4ZXBqbjBiM2M2OTZ2aW5tOHIgZ3NzaS5pdF92bG1ibnRyMDU4OXZjdDdtb2lmdHRnMTlwa0Bn&amp;tmsrc=gssi.it_vlmbntr0589vct7moifttg19pk%40group.calendar.google.com">Add event to Google calendar</a></td>
 <td>November 4, 2020</td>
 </tr>
 <tr>
