Deployed  with MkDocs version: 1.1.2

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -135,6 +135,12 @@
 <td>December 16, 2020</td>
 </tr>
 <tr>
+<td><img style="width:60px;" src="https://www.kindpng.com/picc/m/24-248253_user-profile-default-image-png-clipart-png-download.png"></td>
+<td><a href="https://www.researchgate.net/profile/Alex_Viguerie">Alexander Viguerie</a><br> GSSI</td>
+<td>TBA</td>
+<td>December 10, 2020</td>
+</tr>
+<tr>
 <td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"></td>
 <td><a href="https://www.tu-chemnitz.de/mathematik/wire/prof.php">Martin Stoll</a><br> TU-Chemnitz</td>
 <td>TBA</td>
@@ -143,13 +149,13 @@
 <tr>
 <td><img style="width:60px;" src="https://www.kindpng.com/picc/m/24-248253_user-profile-default-image-png-clipart-png-download.png"></td>
 <td><a href="http://bugs.unica.it/~patricia/">Patricia Diaz De Alba</a><br> GSSI</td>
-<td>TBA</td>
+<td><strong>Numerical treatment for inverse electromagnetic problems</strong><br>Electromagnetic induction surveys are among the most popular techniques for non-destructive investigation of soil properties, in order to detect the presence of both ground inhomogeneities and particular substances. Frequency-domain electromagnetic instruments allow the collection of data in different configurations, that is, varying the intercoil spacing, the frequency, and the height above the ground.<br> Based on a non-linear forward model used to describe the interaction between an electromagnetic field and the soil, the aim is to reconstruct the distribution of either the electrical conductivity or the magnetic permeability with respect to depth. To this end, the inversion of both the real (in-phase) and the imaginary (quadrature) components of the signal are studied by a regularized damped Gauss-Newton method. The regularization part of the algorithm is based on a low-rank approximation of the Jacobian of the non-linear model. Furthermore, in many situations, a regularization scheme retrieving smooth solutions is blindly applied, without taking into account the prior available knowledge. An algorithm for a regularization method that promotes the sparsity of the reconstructed electrical conductivity or magnetic permeability distribution is available. This regularization strategy incorporates a minimum gradient support stabilizer into a truncated generalized singular value decomposition scheme. The whole inversion algorithm has been enclosed in a MATLAB package, called FDEMtools, allowing the user to experiment with synthetic and experimental data sets, and different regularization strategies, in order to compare them and draw conclusions.<br> The numerical effectiveness of the inversion procedure is demonstrated on synthetic and real datasets by using FDEMtools package.<br><a href="https://us02web.zoom.us/j/85165138386?pwd=KzhMdzlIYm14MTNYVjdqMnhWZzdXZz09">Zoom link</a></td>
 <td>November 20, 2020</td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="https://www.gssi.it/media/k2/items/cache/131afc1cb16b90a10de84b1d079bb47e_L.jpg"></td>
 <td><a href="https://na.uni-tuebingen.de/~lubich/">Christian Lubich</a><br> University of Tuebingen</td>
-<td>TBA</td>
+<td>TBA<br><a href="https://us02web.zoom.us/j/83782294125?pwd=aVU0aXAzdGVubXJEZklEWVFEN3JCUT09">Zoom link</a></td>
 <td>November 18, 2020</td>
 </tr>
 <tr>
