Deployed  with MkDocs version: 1.1.2

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -132,13 +132,19 @@
 <td><img style="width:60px;" src="/img/gceruti.jpeg"></td>
 <td><a href="https://na.uni-tuebingen.de/~ceruti/">Gianluca Ceruti</a><br> University of Tuebingen</td>
 <td>TBA</td>
-<td>December 16, 2020</td>
+<td>January 13, 2021</td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="https://www.gssi.it/media/k2/items/cache/171ccfd678ecfd0d1d1085fd8988fdb0_L.jpg"></td>
 <td><a href="https://www.gssi.it/people/post-doc/post-doc-maths/item/11289-viguerie-alex">Alexander Viguerie</a><br> GSSI</td>
-<td>TBA</td>
-<td>December 10, 2020</td>
+<td><strong>Efficient, stable, and reliable solvers for the Steady Incompressible Navier-Stokes equations: application to Computational Hemodynamics.</strong><br></td>
+<td></td>
+</tr>
+<tr>
+<td>Over the past several years, computational fluid dynamics (CFD) simulations have become increasingly popular as a clinical tool for cardiologists at the patient-specific level. The use of CFD in this area poses several challenges. The clinical setting places heavy restrictions on both computational time and power. Simulation results are usually desired within minutes and are usually run on standard computers. For these reasons, steady-state Navier-Stokes simulations are usually preferred, as they can be completed in a fraction of the time required to run an unsteady computation. However, in many respects the steady problem is more difficult than the unsteady one, particularly in regards to solving the associated linear and nonlinear systems. Additionally, boundary data for patient-specific problems is often missing, incomplete, or unreliable. This makes the determination of a useful model challenging, as it requires the generation of reliable boundary data without introducing heavy computational costs. This seminar will address these challenges, as well as some others, and introduce new techniques for workarounds. Results from patient-specific cases will be presented and discussed.</td>
+<td>December 16, 2020</td>
+<td></td>
+<td></td>
 </tr>
 <tr>
 <td><img style="width:60px;" src="https://www.tu-chemnitz.de/mathematik/wire/pics/stoll.jpg"></td>
