--- a/seminar/index.html
+++ b/seminar/index.html
@@ -123,7 +123,7 @@
 <tr>
 <th>Speaker</th>
 <th></th>
-<th>Title &amp; Abstract</th>
+<th>Title, Abstract &amp; Other Info</th>
 <th>Date</th>
 </tr>
 </thead>
