Deployed  with MkDocs version: 1.1.2

--- a/people/index.html
+++ b/people/index.html
@@ -139,6 +139,8 @@
 <h1 id="faculty">Faculty</h1>
 <!-- <br> -->
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed?listType=playlist&list=PLsxnMVEXj7WDT5uWhneRlHbdKCyKywZVT" title="YouTube video player" frameborder="2" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <h3 id="nicola-guglielmi">Nicola Guglielmi</h3>
 <p><img class="people_photo" src="https://www.gssi.it/media/k2/items/cache/16fd96deba85a06311383433f152ed24_XL.jpg"/></p>
 <p>Nicola Gugliemi is full professor in Numerical Analysis and Chair of the Doctoral School in Mathematics at GSSI. He is interested in the general area of scientific computing, particularly numerical analysis of ordinary and delay differential equations, stability analysis of (discretized) dynamical systems - including variable coefficient and switched systems - and ode methods in matrix perturbation theory and control, for high-dimensional problems.<br />
