Deployed  with MkDocs version: 1.1.2

--- a/reading_group/index.html
+++ b/reading_group/index.html
@@ -120,11 +120,12 @@
         <div class="col-md-12" role="main">
 
 <h1 id="reading-group">Reading Group</h1>
-<p>We organize a reading group on topics related to <strong>Numerics and Matrix Theory with particular emphasis on their application in Machine Learning, Data Mining and Network Science.</strong> 
-We meet regularly to read a paper of common interest, together, with the goal of creating some motivation for staying up to date with the new papers or to catch up with some papers that you wanted to read but postponed for some time.</p>
+<p>We organize a reading group on topics related to <strong>Numerics/Matrix Theory/Graph Theory with particular emphasis on their application/connection with Machine Learning, Data Mining and Network Science.</strong> 
+We meet regularly to read a paper of common interest, together, with the goal of creating some motivation for staying up to date with the new papers or to catch up with some papers that you wanted to read but postponed for some time.  </p>
+<p>The meetings will take place in the Main Lecture Hall on Wednesdays, starting at around 16:30-17:00. In person participation is highly encouraged (if the numbers will allow that), but there will be the possibility to join also via zoom.   </p>
 <p>If you are interested in participating please complete the form below until October 31 to be to be notified about the first meeting (the form will continue working after that):<br />
 Google Form: <a href="https://forms.gle/8BUovFDTbx9YH6L2A">Subscription to Reading Group mailing list</a></p>
-<p>If you have several papers in mind but you are not ready to host several talks you can propose your ideas for the papers here: <br />
+<p>If you have suggestions for papers to ready you can propose your ideas here: <br />
 Google Form: <a href="https://forms.gle/fzrMX4Vyu7WBmbYB6">Suggestions for papers to read</a></p>
 <p>The reading group is organized by our early career group members and supervised/coordinated by  <a href="https://www.gssi.it/people/professors/lectures-maths/item/545-guglielmi-nicola">Nicola Guglielmi</a> and <a href="https://ftudisco.gitlab.io">Francesco Tudisco</a>. </p>
 <table>
