--- a/reading_group/index.html
+++ b/reading_group/index.html
@@ -157,10 +157,10 @@ Google Form: <a href="https://forms.gle/fzrMX4Vyu7WBmbYB6">Suggestions for paper
 </thead>
 <tbody>
 <tr>
+<td><a href="https://www.gssi.it/people/students/students-maths/item/11045-savostianova-dayana">Dayana Savostianova</a></td>
 <td></td>
-<td></td>
-<td></td>
-<td></td>
+<td>Witches' Brew: Industrial Scale Data Poisoning via Gradient Matching <br><br> Data Poisoning attacks modify training data to maliciously control a model trained on such data. In this work, we focus on targeted poisoning attacks which cause a reclassification of an unmodified test image and as such breach model integrity. We consider a particularly malicious poisoning attack that is both "from scratch" and "clean label", meaning we analyze an attack that successfully works against new, randomly initialized models, and is nearly imperceptible to humans, all while perturbing only a small fraction of the training data. Previous poisoning attacks against deep neural networks in this setting have been limited in scope and success, working only in simplified settings or being prohibitively expensive for large datasets. The central mechanism of the new attack is matching the gradient direction of malicious examples. We analyze why this works, supplement with practical considerations. and show its threat to real-world practitioners, finding that it is the first poisoning method to cause targeted misclassification in modern deep networks trained from scratch on a full-sized, poisoned ImageNet dataset. Finally we demonstrate the limitations of existing defensive strategies against such an attack, concluding that data poisoning is a credible threat, even for large-scale deep learning systems.  <br><br>  ICLR 2021 - <a href="https://arxiv.org/abs/2009.02276">https://arxiv.org/abs/2009.02276</a></td>
+<td>November 24, 2021</td>
 </tr>
 </tbody>
 </table></div>
