--- a/reading_group/index.html
+++ b/reading_group/index.html
@@ -119,8 +119,8 @@
         
         <div class="col-md-12" role="main">
 
-<h1 id="reading-group">Reading Group</h1>
-<p>We organize a reading group on topics related to <strong>Numerics/Matrix Theory/Graph Theory with particular emphasis on their application/connection with Machine Learning, Data Mining and Network Science.</strong> 
+<h1 id="compile-reading-group">COMPiLE Reading Group</h1>
+<p>We organize a reading group on <em>COMPutational LEarning</em>, specifically on topics related to <strong>Numerics/Matrix Theory/Graph Theory with particular emphasis on their application/connection with Machine Learning, Data Mining and Network Science.</strong> 
 We meet regularly to read a paper of common interest, together, with the goal of creating some motivation for staying up to date with the new papers or to catch up with some papers that you wanted to read but postponed for some time.  </p>
 <p>The meetings will take place in the Main Lecture Hall on Wednesdays, starting at around 16:30-17:00. In person participation is highly encouraged (if the numbers will allow that), but there will be the possibility to join also via zoom.   </p>
 <p>If you are interested in participating please complete the form below until October 31 to be to be notified about the first meeting (the form will continue working after that):<br />
