Deployed  with MkDocs version: 1.1.2

--- a/research/index.html
+++ b/research/index.html
@@ -152,13 +152,13 @@
 <li>Numerical integration of ODEs  </li>
 <li>Numerical solution of nonlinear eigenvector problems   </li>
 <li>Numerical linear algebra   </li>
-<li>Computational data science   </li>
+<li>Computational machine learning and data science   </li>
 <li>Spectral graph theory   </li>
 <li>Numerical Optimization </li>
 <li>Analysis of complex networks   </li>
 </ul>
 <p>and their applications to a wide range of real-world problems. Some specific topics of interest  are described below.</p>
-<h3 id="efficient-training-of-stable-implicit-depth-neural-networks"><strong>Efficient training of stable implicit-depth neural networks</strong></h3>
+<h3 id="efficient-training-of-stable-implicit-depth-neural-networks">Efficient training of stable implicit-depth neural networks</h3>
 <p>Supervised and semi-supervised classification are among the most important tasks in machine learning and data mining. The state-of-the-art techniques for both these two tasks are based on deep Neural Networks (NNs) or graph NNs. From a mathematical viewpoint, these models boil down to a regularized constrained optimization problem, </p>
 <p>$$\begin{cases} \min \ell(f(x),y) + \lambda \varphi(f) &amp;  \newline
  \text{such that } f\in \mathcal F:=\{f:f(x)=\sigma(W_k\sigma(\cdots \sigma(W_1\sigma(W_0 x))\cdots))\} &amp; 
