--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -134,21 +134,28 @@
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="first-level active"><a href="#vacancies">Vacancies</a></li>
-            <li class="second-level"><a href="#apply-to-join-us">Apply to join us!</a></li>
+            <li class="second-level"><a href="#news">NEWS</a></li>
                 
-            <li class="second-level"><a href="#phd-students">PhD students</a></li>
-                
+                <li class="third-level"><a href="#tenure-track-assistant-professor">Tenure-Track Assistant Professor</a></li>
+                <li class="third-level"><a href="#phd-students">PhD students</a></li>
     </ul>
 </div></div>
         <div class="col-md-9" role="main">
 
 <h1 id="vacancies">Vacancies</h1>
 <p><br></p>
-<p><strong>NEW</strong><br />
-We are looking to hire a new colleague at the level of <a href="https://www.gssi.it/communication/announcements/item/16186-expression-of-interest-tenure-track-assistant-professor-in-numerical-analysis-rtdb-in-the-mathematics-area-at-gssi">Tenure-Track Assistant Professor to join our group!</a></p>
+<h2 id="news">NEWS</h2>
+<ul>
+<li>
+<p>We are looking to hire a new colleague at the level of <a href="#tenure-track-assistant-professor">Tenure-Track Assistant Professor to join our group</a>!</p>
+</li>
+<li>
+<p>We are looking for a new Postodoc to join our group on a project related to Numerics and Machine Learning. This is part of the GSSI-SNS Pro3 grant STANDS, in collaboration with Michele Benzi from the Scuola Normale Superiore in Pisa. More information will be soon posted here. The call for application will open in March 2022.</p>
+</li>
+</ul>
 <!-- **NEW!** We are looking for a new Postdoc to join our group on a project related to *Stability of Neural ODEs* -->
 
-<h3 id="apply-to-join-us">Apply to join us!</h3>
+<h3 id="tenure-track-assistant-professor">Tenure-Track Assistant Professor</h3>
 <p><br></p>
 <p><a href="https://www.gssi.it/communication/announcements/item/16186-expression-of-interest-tenure-track-assistant-professor-in-numerical-analysis-rtdb-in-the-mathematics-area-at-gssi">Call for Expressions of Interest for a Faculty Position at the level of tenure track Assistant Professor (RTDB) in the Numerical Analysis Group (Math Division) of the Gran Sasso Science Institute, School of Advanced Studies.</a></p>
 <p>The <a href="../">Numerical Analysis and Data Science group</a> of the Gran Sasso Science Institute (GSSI) invites expressions of interest for a faculty position at the Assistant Professor level (Tenure Track - RTDB) from highly qualified scholars worldwide.</p>
@@ -156,7 +163,7 @@ We are looking to hire a new colleague at the level of <a href="https://www.gssi
 <p>The GSSI is an International School of Advanced Doctoral Studies, with a prominent program of graduate courses. Located in the city of L’Aquila, in the heart of the Apennine Mountains east of Rome, the institute offers a stimulating environment with numerous PhD students and postdoctoral researchers selected internationally every year. 
 English is the official language for all the activities at the institute (teaching, seminars, tutoring, etc.).
 About 40 PhD Students in Applied Mathematics from all over the world are at GSSI at any given time, and part of the duties of the Faculty is to provide teaching and supervision of their research activity. Interdisciplinary projects aimed at increasing the connections with other PhD courses at GSSI within the Math Division as well as the other areas (physics, computer science and regional economics) are encouraged.</p>
-<p>The GSSI will announce one tenure-track position in early 2022. The present call for expressions of interest is aimed at probing the community of scientists at the international level that might want to join the GSSI faculty. We emphasize that all non-Italian citizens and all Italian candidates having spent sufficient time working abroad are entitled to up to 90% reduction of tax load for at least the first 6 years of employment, as per current Italian regulations. Additionally, the successful candidate will be entitled to up to 30% salary increase with respect to National standards, subject to positive evaluation by the hiring committee.</p>
+<p>The GSSI plans to announce one tenure-track position in 2022. The present call for expressions of interest is aimed at probing the community of scientists at the international level that might want to join the GSSI faculty. We emphasize that all non-Italian citizens and all Italian candidates having spent sufficient time working abroad are entitled to up to 90% reduction of tax load for at least the first 6 years of employment, as per current Italian regulations. Additionally, the successful candidate will be entitled to up to 30% salary increase with respect to National standards, subject to positive evaluation by the hiring committee.</p>
 <p>Candidates willing to work in the exciting GSSI atmosphere, as tenure track Assistant Professors, are required to have a doctoral degree in mathematics or related fields prior to the appointment, with a proven record of achievements, a clear potential to promote and lead research activities and a specific interest in teaching at the graduate level to a small set of particularly skilled and motivated students. </p>
 <p>A curriculum vitae, a list of publications, and a brief research statement should be sent by email (<a href="mailto:numerics@gssi.it">numerics@gssi.it</a>), together with a short motivation letter in which the candidate discusses the reasons for their interest in joining the GSSI team. The candidates should also arrange for two recommendation letters to be sent directly to the GSSI (<a href="mailto:numerics@gssi.it">numerics@gssi.it</a>), to support their application. The expressions of interest should be sent at your earliest convenience and in any case not later than Jan 31, 2022.</p>
 <p>GSSI is committed to gender balance, inclusion and diversity. All expressions of interest will be given proper consideration, independent of ethnicity, religion, age, gender, sexual orientation, or disability.</p>
