--- a/reading_group/index.html
+++ b/reading_group/index.html
@@ -171,6 +171,12 @@ Google Form: <a href="https://forms.gle/fzrMX4Vyu7WBmbYB6">Suggestions for paper
 </thead>
 <tbody>
 <tr>
+<td><a href="https://www.gssi.it/people/students/students-computer-science/item/4804-prokopchik-konstantin">Konstantin Prokopchik</a></td>
+<td></td>
+<td>Consensus Dynamics and Opinion Formation on Hypergraphs <br><br> In this chapter, we derive and analyse models for consensus dynamics on hypergraphs. As we discuss, unless there are nonlinear node interaction functions, it is always possible to rewrite the system in terms of a new network of effective pairwise node interactions, regardless of the initially underlying multi-way interaction structure. We thus focus on dynamics based on a certain class of non-linear interaction functions, which can model different sociological phenomena such as peer pressure and stubbornness. Unlike for linear consensus dynamics on networks, we show how our nonlinear model dynamics can cause shifts away from the average system state. We examine how these shifts are influenced by the distribution of the initial states, the underlying hypergraph structure and different forms of non-linear scaling of the node interaction function.  <br><br>  <a href="https://arxiv.org/abs/2105.01369">https://arxiv.org/abs/2105.01369</a></td>
+<td>Jan 26, 2022</td>
+</tr>
+<tr>
 <td><a href="https://www.gssi.it/people/students/students-computer-science/item/7896-fioravanti-simone">Simone Fioravanti</a></td>
 <td></td>
 <td>EigenGame: PCA as Nash Equilibrium <br><br> We present a novel view on principal component analysis (PCA) as a competitive game in which each approximate eigenvector is controlled by a player whose goal is to maximize their own utility function. We analyze the properties of this PCA game and the behavior of its gradient based updates. The resulting algorithm -- which combines elements from Oja's rule with a generalized Gram-Schmidt orthogonalization -- is naturally decentralized and hence parallelizable through message passing. We demonstrate the scalability of the algorithm with experiments on large image datasets and neural network activations. We discuss how this new view of PCA as a differentiable game can lead to further algorithmic developments and insights.  <br><br>  ICLR 2021 - <a href="https://arxiv.org/abs/2010.00554">https://arxiv.org/abs/2010.00554</a></td>
