Deployed  with MkDocs version: 1.2.3

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -155,6 +155,12 @@
 <td>May 26, 2022</td>
 </tr>
 <tr>
+<td><img style="width:60px;" src="https://www.gssi.it/media/k2/items/cache/5cd3c3b4be76a74bafd789129eef93a7_L.jpg"></td>
+<td><a href="https://www.gssi.it/people/post-doc/post-doc-maths/item/10533-cifani-paolo">Paolo Cifani</a><br> Gran Sasso Science Institute, Italy</td>
+<td><strong>Geometric integration of Lie-Poisson flows on the sphere</strong><br>In this seminar I will touch upon the recent developments in structure-preserving (geometric) integration of Euler’s equations for two-dimensional incompressible flows. It has been known for half a century that the dynamics of incompressible ideal fluids in two dimensions can be understood as an evolution equation on the contangent bundle of the infinite-dimensional Lie group of symplectic dffeomorphisms. In particular, the vorticity equation constitutes a Lie-Poisson system characterized by an infinite number of first integrals, i.e. the integrated powers of vorticity. This set of constraints, absent in three dimensions, has profound effects on the energy transfer mechanisms across scales of motion. Yet, the construction of a numerical system which preserves this rich Poisson structure has been elusive. Most attempts either fail in fully preserving the geometric structure or have a high computational complexity. Here, I will show that, thanks to our recent advances, it possible to design a geometric integrator which embeds this fundamental principle of the continuum into the discrete system at a modest computational cost. The construction of such scheme, the main numerical algorithms and their parallelisation on modern supercomputing facilities will be discussed. Finally, an application to the spectrum of homogeneous two-dimensional turbulence will be illustrated.</td>
+<td>May 24, 2022</td>
+</tr>
+<tr>
 <td><img style="width:60px;" src="  https://i1.rgstatic.net/ii/profile.image/951182742806528-1603791046262_Q512/Simone-Camarri.jpg"></td>
 <td><a href="https://scholar.google.com/citations?user=FSBvbjMAAAAJ&amp;hl=it">Simone Camarri</a><br> University of Pisa, Italy</td>
 <td><strong>TBA</strong><br></td>
