--- a/seminar/index.html
+++ b/seminar/index.html
@@ -167,6 +167,12 @@
 <td>May 18, 2022</td>
 </tr>
 <tr>
+<td><img style="width:60px;" src="http://www.unige.ch/~hairer/"></td>
+<td><a href="http://www.unige.ch/~hairer/pictures/hai07-2.jpg">Ernst Hairer</a><br> University of Geneva, Switzerland</td>
+<td><strong>TBA</strong><br></td>
+<td>April 26, 2022</td>
+</tr>
+<tr>
 <td><img style="width:60px;" src="https://dmi.units.it/~zennaro/foto_marino380.jpg"></td>
 <td><a href="https://dmi.units.it/~zennaro/">Marino Zennaro</a><br> University of Trieste, Italy</td>
 <td><strong>Computing antinorms on multicones</strong><br><a href="https://drive.google.com/file/d/1KQO_nF3FloOUrShd7t_TsDmGSEveCLqH/view?usp=sharing">Abstract</a></td>
