--- a/seminar/index.html
+++ b/seminar/index.html
@@ -167,8 +167,8 @@
 <td>May 18, 2022</td>
 </tr>
 <tr>
-<td><img style="width:60px;" src="http://www.unige.ch/~hairer/"></td>
-<td><a href="http://www.unige.ch/~hairer/pictures/hai07-2.jpg">Ernst Hairer</a><br> University of Geneva, Switzerland</td>
+<td><img style="width:60px;" src="http://www.unige.ch/~hairer/pictures/hai07-2.jpg"></td>
+<td><a href="http://www.unige.ch/~hairer/">Ernst Hairer</a><br> University of Geneva, Switzerland</td>
 <td><strong>TBA</strong><br></td>
 <td>April 26, 2022</td>
 </tr>
