Deployed  with MkDocs version: 1.2.3

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -169,7 +169,7 @@
 <tr>
 <td><img style="width:60px;" src="http://www.unige.ch/~hairer/pictures/hai07-2.jpg"></td>
 <td><a href="http://www.unige.ch/~hairer/">Ernst Hairer</a><br> University of Geneva, Switzerland</td>
-<td><strong>TBA</strong><br></td>
+<td><strong>High order PDE-convergence of ADI-type integrators for parabolic problems</strong><br>This work considers space-discretised parabolic problems on a rectangular domain subject to Dirichlet boundary conditions. For the time integration s-stage AMF-W-methods, which are ADI (Alternating Direction Implicit) type integrators, are considered. They are particularly efficient when the space dimension of the problem is large. The classical algebraic conditions for order p (with p&lt;=3) are shown to be sufficient for PDE-convergence of order p (independently of the spatial resolution) in the case of time independent Dirichlet boundary conditions. Under additional conditions, PDE-convergence of order p=3.25-eps for every eps&gt;0 can be obtained. In the case of time dependent boundary conditions there is an order reduction. This is joint work with Severiano Gonzalez-Pinto and Domingo Hernandez-Abreu. Related publications can be downloaded from http://www.unige.ch/~hairer/preprints.html</td>
 <td>April 26, 2022</td>
 </tr>
 <tr>
