Deployed  with MkDocs version: 1.2.3

--- a/seminar/index.html
+++ b/seminar/index.html
@@ -163,7 +163,7 @@
 <tr>
 <td><img style="width:60px;" src="  https://i1.rgstatic.net/ii/profile.image/951182742806528-1603791046262_Q512/Simone-Camarri.jpg"></td>
 <td><a href="https://scholar.google.com/citations?user=FSBvbjMAAAAJ&amp;hl=it">Simone Camarri</a><br> University of Pisa, Italy</td>
-<td><strong>TBA</strong><br></td>
+<td><strong>Adjoint-based passive control of hydrodynamic instabilities</strong><br>A large number of research papers in the literature have been dedicated to the use of adjoint-based sensitivity and global stability analyses for both characterising and controlling instabilities in fluid mechanics. Such controls, which are mainly passive, are designed for stabilising linearly unstable configurations. The design strategy based on global stability analysis can be rigorously applied to relatively simple flows in laminar regime. More complex configurations can also be rigorously treated, as for instance cases in which the flow to be controlled is time periodic. Moreover, a large interest exists in the application of the same methods for the control of coherent large-scale flow structures in turbulent flows as, for instance, the quasi-periodic shedding of vortices in turbulent wakes. This is possible by postulating the marginal stability of mean flows, which is shown to apply for several cases of interest. In this seminar a review of the methods based on global stability and sensitivity analyses for the design and/or analysis of passive controls will be presented. Moreover, configurations of increasing complexity will be considered, ranging from laminar steady flows to turbulent flows.<br></td>
 <td>May 18, 2022</td>
 </tr>
 <tr>
