Deployed  with MkDocs version: 1.2.3

--- a/vacancies/index.html
+++ b/vacancies/index.html
@@ -150,7 +150,7 @@
 <p>We are looking to hire a new colleague at the level of <a href="#tenure-track-assistant-professor">Tenure-Track Assistant Professor to join our group</a>!</p>
 </li>
 <li>
-<p>We are looking for a new Postodoc to join our group on a project related to Numerics and Machine Learning. This is part of the GSSI-SNS Pro3 grant STANDS, in collaboration with Michele Benzi from the Scuola Normale Superiore in Pisa. More information will be soon posted here. The call for application will open in March 2022.</p>
+<p>We are looking for a postdoctoral research associate to join our group on a joint project with Michele Benzi from Scuola Normale Superiore in Pisa. The postdoctoral fellow will be working on topics at the interface between Numerical Methods and Machine Learning and will be funded by the MUR-Pro3 grant "STANDS - Numerical STAbility of Neural Dynamical Systems". The official call for application will open up soon. For more details and in order to express your interest, please refer to <a href="https://forms.gle/BWAEzz66aCA8Qa6J9"><strong>this form</strong></a>.</p>
 </li>
 </ul>
 <!-- **NEW!** We are looking for a new Postdoc to join our group on a project related to *Stability of Neural ODEs* -->
