--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <p><subtitle> Gran Sasso Science Institute </subtitle></p>
 <p><img alt="" src="img/gssi-mountains-2.jpg" /></p>
 <p>This is the homepage of the Numerical Analysis and Data Science Group at <a href="https://www.gssi.it">Gran Sasso Science Institute</a>. The group's interests  center around numerical methods for differential equations and dynamical systems, numerical linear algebra, matrix theory, optimization and their  application to the analysis of graphs and networks and to problems related to learning from data. </p>
+<p>For news, data and code, please also refer to our <a href="https://github.com/compilelab">GitHub Repository</a> and  <a href="">Mastodon news feed</a>.</p>
 <!-- ## About GSSI
 
  The Gran Sasso Science Institute (GSSI) is an international PhD school and a center for research and higher education in the areas of Physics, Mathematics, Computer Science and Social Sciences.  
@@ -263,6 +264,6 @@ Professors, researchers and students from all scientific backgrounds are selecte
 </html>
 
 <!--
-MkDocs version : 1.2.3
-Build Date UTC : 2022-09-12 20:44:51.803203+00:00
+MkDocs version : 1.4.1
+Build Date UTC : 2022-11-18 13:45:29.517900+00:00
 -->
